# UncoupledETL

./: Dockerfile  main.py  pyproject.toml  requirements.txt
tests/: test_uncoupledetl.py
uncoupledetl/: data_types.py  extract.py  load.py  transform.py  variables.py
