[tool.poetry]
name = "UncoupledETL"
version = "0.1.0"
description = ""
authors = ["MathXCruz <matheus.cruz1996@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.36"
httpx = "^0.22.0"
sentry-sdk = "^1.5.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
